# zlib-minizip

./: .gitignore  CMakeLists.txt  README.md  local-build.cmd
libminizip/: CMakeLists.txt
miniunz/: CMakeLists.txt
minizip/: CMakeLists.txt
